<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:layout_marginTop="@dimen/settings_item_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/range"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBarRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:max="6"
                    android:progress="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:layout_marginTop="@dimen/settings_item_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/delay"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBarDelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:max="6"
                    android:progress="3" />


            </TableRow>

            <CheckBox
                android:id="@+id/checkBoxScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:layout_marginTop="@dimen/settings_item_vertical_margin"
                android:checked="true"
                android:text="@string/scroll" />
        </TableLayout>

    </RelativeLayout>

</LinearLayout>